# kdb_codec

./: .gitignore  CHANGELOG.md  CODEC_PATTERN.md  Cargo.toml  INDEX_TRAIT.md  K_MACRO_GUIDE.md  README.md  SUMMARY.md
.github/workflows/: docs.yml  fuzzing.yml  test.yml
docs/: .gitignore  README.md  index.md  next.config.mjs  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/app/: layout.tsx
docs/app/(home)/: page.tsx
docs/content/docs/: codec-pattern.mdx  index-trait.mdx  index.mdx  k-macro.mdx  meta.json  qstream.mdx
docs/guide/: codec-pattern.md  index-trait.md  index.md  installation.md  k-macro.md  qstream.md  type-mapping.md
docs/lib/: layout.shared.tsx
ipc_examples/: Cargo.toml
ipc_examples/examples/: acceptor.rs  acceptor_tls.rs  builder_pattern_demo.rs  channel_forwarding.rs  client.rs  codec_example.rs  complex_communication.rs  compression_validation_demo.rs  console.rs  constructor.rs  dictionary_lookup_demo.rs  echo_acceptor.rs  index_trait_demo.rs  macro_demo.rs  modify_object.rs  server.rs  split_stream.rs  temporal_macro_demo.rs
kdb_codec/: Cargo.toml  FUZZING.md
kdb_codec/examples/: custom_security_limits.rs  test_debug.rs
kdb_codec/fuzz/: Cargo.toml
kdb_codec/fuzz/fuzz_targets/: fuzz_codec_decode.rs  fuzz_decompress.rs  fuzz_q_ipc_decode.rs
kdb_codec/src/: codec.rs  connection.rs  conversions.rs  deserialize_sync.rs  error.rs  format.rs  index.rs  lib.rs  lib_old.rs  macros.rs  qconsts.rs  qnull_inf.rs  serialize.rs  types.rs
kdb_codec/src/ipc/: error.rs  mod.rs
kdb_codec/tests/: e2e_acceptor.rs  e2e_acceptor_echo.q  e2e_q_smoke.rs  enum_deser.rs  enum_foreign_roundtrip.rs  foreign_deser.rs  security_decompression.rs  security_deserialization.rs  security_header_validation.rs  security_integration.rs  security_message_size.rs  test.rs  test_kdb_passwd
kdbplus/: Cargo.toml
kdbplus/src/ipc/: codec.rs  connection.rs  deserialize_sync.rs  mod.rs
tmp/: e2e_part.q  q_comment_first.q  q_multiline.q  q_print.q  test_assert.q  test_run_env.q
