[package]
name = "ipc_examples"
version = "0.1.1"
authors = ["diamondrod"]
edition = "2021"
description = """
NOT A PACKAGE TO PUBLISH.

This module provides examples of using `ipc` feature of `kdbplus` library. The functions defined in
 the library are used for simple tests.
"""

[dependencies]

[dev-dependencies]
kdb_codec={path="../kdb_codec", features=["ipc"]}
chrono="0.4"
futures="0.3"
tokio={version="1.0", features=["net", "rt", "io-util", "fs", "macros", "rt-multi-thread"]}
tokio-util={version="0.7", features=["codec"]}
