[package]
name = "kdb_codec"
version = "0.4.0"
authors = ["diamondrod"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/yshing/kdb_codec"
documentation = "https://docs.rs/kdb_codec"
readme = "../README.md"
description = """
Kdb+ IPC codec library for handling kdb+ wire protocol data with Rust.
"""

[dependencies]
bon = "3"
bytes = { version = "1", optional = true }
chrono={version = "0.4", optional = true}
futures = { version = "0.3", optional = true }
once_cell = { version = "1", optional = true}
sha1_smol = { version = "1", optional = true}
tokio = { version = "1", features = [ "net", "rt", "io-util", "fs", "macros", "rt-multi-thread" ], optional = true }
tokio-native-tls = { version = "0.3", optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
trust-dns-resolver = { version = "0.22", optional = true }

[features]
# IPC is the default and only feature
default = ["ipc"]
ipc = ["once_cell", "chrono", "trust-dns-resolver", "tokio", "tokio-native-tls", "tokio-util", "bytes", "sha1_smol", "futures"]

[dev-dependencies]
# IPC test and example
async-std = { version = "1.8.0", features = [ "tokio1", "attributes" ] }
float-cmp = "0.8"

[package.metadata.docs.rs]
all-features = true